2003-02-06  Bill Bumgarner  <bbum@codefab.com>
    * Lib/Foundation/test/test_nsstring.py: Added another test from David
      E. that demonstrates issues with string encoding.

2003-02-04  Bill Bumgarner  <bbum@codefab.com>
    * Lib/AppKit/test/test_nscell.py (TestNSCell.testFloat): Added unit test
      from David Eppstein.
    * objc_support.m (depythonify_c_value): Now uses OC_PythonString to
      encapsulate strings.
    * OC_PythonString.m: implemented.  Class should be optimized by covering
      the various random utility/extension methods in NSString's API as
      transparent call-throughs to the appropriate method/function on the
      encapsulated CFString.
    * OC_Python*.m: fixed -dealloc to call super.

2003-02-03  Bill Bumgarner  <bbum@codefab.com>
    * Lib/Foundation/test/test_nsundomanager.py: Added integer test from
      David Eppstein
    * _convenience.py:  removed mapping of __repr__ to -description
    * Cocoa-Python Document-based Application:  Fixed copy files phase and
      references to PyObjC module.

2003-02-02  Bill Bumgarner  <bbum@codefab.com>
    * Project Templates/clean.py: Added a simple script to clean the project
      template tree.

2003-02-01  Bill Bumgarner  <bbum@codefab.com>
    * Moved project templates to copy the PyObjC directory from
      site-packages.  Fixed Web Services Tool example appropriately.
    * Lib/objc/_convenience.py:  __repr__ and __str__ now both invoke
      -description.   Not sure why __repr__ doing that was commented out
      before, but it seems to work-- same set of unit tests pass.
    * Lib/Foundation/Conversion.py:  Now handles NSValue instances correctly
      [like NSNumber].

2003-01-31  Just van Rossum <just@letterror.com>
    * Added autoGIL extension module.  It's a top-level module as it's not
      Cocoa- or PyObjC-specific. In fact it may end up in the Python
      distribution at some point.  autoGIL.installAutoGIL() is called at